--- a/src/app/app-routing.module.ts.save.1
+++ b/src/app/app-routing.module.ts.save.1
@@ -2,7 +2,8 @@ import { NgModule } from '@angular/core';
 import { Routes, RouterModule } from '@angular/router';
 
 import { HomeComponent } from './pages/home/home.component';
-import { CallbackComponent } from './pages/callback/callback.component';
+import { CallbackComponent } from './pages/callback/callbackimport { HomeComponent } from './pages/home/home.component';
+.component';
 
 
 const routes: Routes = [
@@ -10,10 +11,8 @@ const routes: Routes = [
     path: '',
     component: HomeComponent
   },
-  {
-    path: 'callback',
-    component: CallbackComponent
-  }
+import { HomeComponent } from './pages/home/home.component';
+
 ];
 
 @NgModule({
